update before upload challenge

--- a/index.html
+++ b/index.html
@@ -61,14 +61,16 @@
               </nav>
             </div>
         <div class= "hero-master">
-            <div class="hero-title bg-primary ">
+            <div class="hero-title ">
                     <h1 class="display-4">PLAY TRADITIONAL GAME</h1>
                     <h4 class="">Experience new traditional game play</h4>
                     </div>
-                    <div class="hero-button bg-danger ">
+                    <div class="hero-button  ">
+                        <a href="rockpaperscissors.html">
                     <button type="button" class="btn buttonhero">PLAY NOW</button>
+                </a>
                     </div>
-                <div class="bottom-text bg-info">
+                <div class="bottom-text">
                 <h5>THE STORY <br> &#5121; </h5>
             </div>
         </div>
@@ -296,7 +298,7 @@
                 <img class="mx-4" src="assets/Vector.svg">
             </div>
         </div>
-        <div class="row footer-last bg-info">
+        <div class="row footer-last">
             <div class="copyright col-lg-4 col-sm-12">
                 <p> &#169 2018 Your Games, Inc. All Rights Reserved</p>
             </div>
