--- a/rockpaperscissors.html
+++ b/rockpaperscissors.html
@@ -32,19 +32,19 @@
             <div class="container">
                 <div id="player-choices" class="choices hover-large">
                     <div class="container">
-                        <div id="bingkairock" class="bingkai  mx-auto ">
+                        <div id="bingkairock" class="bingkai  mx-auto rounded ">
                                 <img id= "rock"class="icon  pilihan "  src="/assets/batu.png">
                         </div>
                     </div>
 
                     <div class="container">
-                        <div id="bingkaipaper" class="bingkai  mx-auto">
+                        <div id="bingkaipaper" class="bingkai  mx-auto rounded ">
                                 <img id = "paper"class="icon  pilihan"  src="/assets/kertas.png">
                         </div>
                     </div>
 
                     <div class="container">
-                        <div id="bingkaiscissors" class="bingkai  mx-auto">
+                        <div id="bingkaiscissors" class="bingkai  mx-auto rounded">
                                 <img id="scissors" class="icon  pilihan" src="/assets/gunting.png">
                         </div>
                     </div>
@@ -67,19 +67,19 @@
             <div class="container">
             <div id="comp-choices" class="choices">
                 <div class="container">
-                    <div id="bingkairockAI" class="bingkai  mx-auto">
+                    <div id="bingkairockAI" class="bingkai  mx-auto rounded">
                             <img id="rockAI" class="icon   pilihanAI"  src="/assets/batu.png">
                     </div>
                 </div>
 
                 <div class="container">
-                    <div id= "bingkaipaperAI" class="bingkai  mx-auto">
+                    <div id= "bingkaipaperAI" class="bingkai  mx-auto rounded">
                             <img id="paperAI"class="icon   pilihanAI"  src="/assets/kertas.png">
                     </div>
                 </div>
 
                 <div class="container">
-                    <div id="bingkaiscissorsAI" class="bingkai mx-auto">
+                    <div id="bingkaiscissorsAI" class="bingkai mx-auto rounded">
                             <img id="scissorsAI" class="icon   pilihanAI"  src="/assets/gunting.png">
                     </div>
                 </div>
@@ -106,8 +106,6 @@
     
     
 </div>
-
-</section>
 <script src="/rockpaperscissors.js" type="text/javascript"></script>
 
 </body>
